--- a/apps/pokedex/package.json
+++ b/apps/pokedex/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint --ext js,ts,tsx .",
     "test": "jest",
     "build": "expo export --output-dir ./build --platform all",
+    "generate:schema": "get-graphql-schema https://graphql-pokeapi.graphcdn.app/ > schema.graphql",
+    "relay": "relay-compiler --watch",
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -15,8 +17,8 @@
     "eas-build-post-install": "pnpm run -w build:pokedex-app"
   },
   "dependencies": {
-    "@pokeworld/ui": "workspace:*",
     "@expo/vector-icons": "^14.1.0",
+    "@pokeworld/ui": "workspace:*",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~53.0.6",
@@ -39,16 +41,26 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "react-relay": "^20.0.0",
+    "relay-runtime": "^20.0.0"
   },
   "devDependencies": {
-    "@pokeworld/eslint-config": "workspace:*",
     "@babel/core": "^7.25.2",
+    "@pokeworld/eslint-config": "workspace:*",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.14",
+    "@types/react-relay": "^18.2.1",
+    "@types/relay-runtime": "^19.0.2",
+    "babel-plugin-relay": "^20.0.0",
+    "eslint-plugin-relay": "^2.0.0",
+    "get-graphql-schema": "^2.1.2",
+    "graphql": "^16.11.0",
+    "graphql-config": "^5.1.5",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.4",
+    "relay-compiler": "^20.0.0",
     "typescript": "^5.3.3"
   },
   "eslintConfig": {
