--- a/apps/pokedex/package.json
+++ b/apps/pokedex/package.json
@@ -33,6 +33,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -50,6 +51,7 @@
     "@pokeworld/eslint-config": "workspace:*",
     "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.20",
     "@types/react": "~19.0.14",
     "@types/react-relay": "^18.2.1",
     "@types/relay-runtime": "^19.0.2",
