--- a/apps/pokedex/package.json
+++ b/apps/pokedex/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "dev": "expo start --port 8082",
+    "dev": "expo start --port 8082 --dev-client",
     "lint": "eslint --ext js,ts,tsx .",
     "test": "jest",
     "build": "expo export --output-dir ./build --platform all",
